--- a/gateone/templates/themes/white.css
+++ b/gateone/templates/themes/white.css
@@ -43,7 +43,7 @@
 }
 .✈workspace {
     color: #000;
-    position: static;
+    position: relative;
     float: left;
     -webkit-transition: -webkit-transform 1s ease-in-out;
     -moz-transition: -moz-transform 1s ease-in-out;
